2006-08-19  Aaron Bockover  <abockover@novell.com>

	* test/driver.c: Added --debug mode that allows for testing all paths
	of the driver without actually running real tests; runs only the 'fake'
	test, which does nothing; useful for running the driver through valgrind

	* test/Makefile.am:
	* test/tests.h:
	* test/fake.c: Added fake test for valgrinding the driver

	* test/ptrarray.c: update sort test

2006-08-19  Aaron Bockover  <abockover@novell.com>

	* test/test-both: added --help

2006-08-19  Aaron Bockover  <abockover@novell.com>

	* test/driver.c: added -n mode to show only raw global run times,
	which is useful for scripts (test-both --speed-compare)

	* test/test-both: added --speed-compare mode

	* test/README: updated with information on --speed-compare

2006-08-19  Aaron Bockover  <abockover@novell.com>

	* test/test.c: do not print times if -t is not passed

	* test/driver.c: removed use of GList from the driver to avoid skews due
	to performance differences between GLib and EGLib
	
2006-08-19  Aaron Bockover  <abockover@novell.com>

	* test/test.c: Perform iterations at the test level, only output one
	report for all iterations of tests in a group to produce more usable
	output; add timing for the tests and group; added get_timestamp for
	easy code timing

	* test/test.h: Removed run_test as it should only be called from 
	run_group, added get_timestamp

	* test/Makefile.am: Added -DDRIVER_NAME 

	* test/test-both: simple script to run both drivers with the same options

	* test/driver.c: Iterations are now run at the test level, show a global
	status (OK/FAIL) indicator

	* test/README: Updated

	* configure.ac: Renamed from configure.in as configure.in naming 
	convention is deprecated in favor of configure.ac

	* autogen.sh: s/configure.in/configure.ac/

2006-08-19  Miguel de Icaza  <miguel@novell.com>

	* Makefile.am: Removed MAINTAINERCLEANFILES that was too
	aggresive, it failed make distcheck and the resulting tarball was
	not buildable.
